@@ -4,7 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.List;
 import org.apache.commons.exec.Executor;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -31,7 +31,7 @@ class HttpClientCommandLineApplicationTests {
   @Test
   void httpClientCommandLine() throws IOException {
     // given
-    var files = Collections.singletonList(Path.of("echo.http").toFile());
+    var files = List.of(Path.of("echo.http").toFile());
 
     httpClientCommandLine.files(files);
     httpClientCommandLine.logLevel(LogLevel.VERBOSE);
